--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,3 +71,5 @@ flutter {
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
