--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
   
   # Backend Services
   supabase_flutter: ^2.3.4
-  firebase_core: ^2.24.2
-  firebase_messaging: ^14.7.9
-  flutter_local_notifications: ^16.3.0
+  # firebase_core: ^2.24.2
+  # firebase_messaging: ^14.7.9
+  # flutter_local_notifications: ^16.3.0
   
   # UI & Navigation
   go_router: ^13.0.0
@@ -36,7 +36,8 @@ dependencies:
   image: ^4.1.3
   
   # AI/ML
-  tflite_flutter: ^0.10.4
+  tflite_flutter: ^0.12.0
+  google_generative_ai: ^0.4.3
   
   # Maps & Location
   flutter_map: ^6.1.0
